--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -12,7 +12,7 @@
                     <li><a [routerLink]="['/dashboard/viewprofile',credential.userId,'bookmark']">Bookmarks</a></li>
                     <li><a [routerLink]="['/dashboard/viewprofile',credential.userId,'blog-create']">Blogs</a></li>
                     <!--<li><a [routerLink]="['/dashboard/blog-post']">Blog Post</a></li>-->
-                    <li><a [routerLink]="['/dashboard/blog-post']">Direct Question</a></li>
+                    <li><a [routerLink]="['/dashboard/viewprofile',credential.userId,'direct-question']">Direct Question</a></li>
                 </ul>
             </div>
             <div class="col-md-9 border-top-grey" >
