--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-stat/profile-stat.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-stat/profile-stat.component.html
@@ -1,7 +1,9 @@
 ﻿<style>
-    .statistic-panel{
-        min-height:20vh;
+    .statistic-panel {
+        min-height: 20vh;
+        padding-right: 30%;
     }
+
     .profile-rightmenu {
         color: #9d9d9b;
         width: 100%;
@@ -9,7 +11,7 @@
         border-top: 1px solid #eeeeee;
         padding-top: 10px;
         list-style: none;
-        padding-left:20px;
+        padding-left: 20px;
     }
 </style>
 <div class="statistic-panel">
