--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/direct-question/direct-question.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/direct-question/direct-question.component.html
@@ -6,23 +6,26 @@
     .btn-select{
         text-align:left;
     }
+    .bottom-margin{
+        margin-bottom:10px;
+    }
 </style>
 <form>
     <div class="form-group from-md">
-        <input type="text" class="form-control" placeholder="Haz tu pregunta aquí o busca tus preguntas aquí" id="title" autocomplete="off"
-               [(ngModel)]="question.title" required name="titleName" #titleName="ngModel" (keyup)=filterQuestions($event) />
+        <input type="text" class="form-control bottom-margin" placeholder="Haz tu pregunta aquí o busca tus preguntas aquí" id="title" autocomplete="off"
+               [(ngModel)]="question.title" required name="titleName" #titleName="ngModel"/>
         <div class="dropdown">
-            <button class="btn btn-block dropdown-toggle btn-select" type="button" data-toggle="dropdown">
+            <button class="btn btn-block dropdown-toggle btn-select bottom-margin" type="button" data-toggle="dropdown">
                 Select Category
                 <span class="caret pull-right"></span>
             </button>
             <ul class="dropdown-menu">
-                <li *ngFor="let category of categories"><a (click)="selectCategory(category)">{{category}}</a></li>
+                <li *ngFor="let category of categories"><a (click)="selectCategory(category)">{{category.name}}</a></li>
             </ul>
         </div>
 
-        <textarea class="form-control" rows="5" placeholder="Agrega detalle de tu pregunta - Optional" [(ngModel)]="question.body" [ngModelOptions]="{standalone: true}"></textarea>
-        <button type="submit" class="btn btn-primary pull-right" [disabled]="!titleName.valid">
+        <textarea class="form-control bottom-margin" rows="5" placeholder="Agrega detalle de tu pregunta - Optional" [(ngModel)]="question.body" [ngModelOptions]="{standalone: true}"></textarea>
+        <button type="submit" class="btn btn-primary pull-right" [disabled]="!titleName.valid" (click)="submitQuestion()">
             Submit Question
         </button>
     </div>
