search panel on click close issue fixed for question home

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -1,6 +1,4 @@
-﻿
-<ap-search placeBottom="top-fixed" (onQuestionSubmit)="onQuestionSubmitted($event)"></ap-search>
-<div class="row">
+﻿<div class="row">
     <div #dialogAnchor></div>
     <div #answerAnchor></div>
 </div>
