Question home on submit reload question

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -1,4 +1,6 @@
-﻿<div class="row">
+﻿<!--<ap-search placeBottom="top-fixed" [onQuestionSubmit]="onQuestionSubmitted($event)"></ap-search>-->
+<!--<ap-search placeBottom="top-fixed" (onQuestionSubmit)="onQuestionSubmitted($event)"></ap-search>-->
+<div class="row">
     <div #dialogAnchor></div>
     <div #answerAnchor></div>
 </div>
