--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-home.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-home.component.html
@@ -21,8 +21,7 @@
         margin-left: 33%;
     }
 </style>
-<div class="row  body-padding">
-    <!--<apq-nav></apq-nav>-->
+<div class="row">
     <nav-bar></nav-bar>
     <router-outlet></router-outlet>
 </div>
