Remove console log

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-user.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-user.component.html
@@ -60,7 +60,7 @@
                 <i class="fa-li fa fa-cog"></i>otherExperience: {{userInfoDetails?.otherExperience}}
             </li>
 
-            <li *ngIf="userInfoDetails?.questionViewCount!=0">
+            <li *ngIf="userInfoDetails?.questionViewCount">
                 <i class="fa-li fa fa-eye">
 
                 </i>Question Views: {{userInfoDetails?.questionViewCount}}
