--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -1,4 +1,14 @@
-﻿<nav-bar></nav-bar>
+﻿<style>
+    .edit {
+        color: #f6912b;
+    }
+    .edit:hover {
+        text-decoration: underline;
+    }
+</style>
+
+
+<nav-bar></nav-bar>
 
 <div>
     <!--<div #credentialDialogAnchor></div>-->
@@ -33,11 +43,24 @@
     <div class="col-md-3" >
         <div>
             <h3>Credentials</h3>
-            <a (click)="openEmploymentDialogAnchor()" class="edit"><span>openEmploymentDialogAnchor</span> </a>
-            <a (click)="openEducationDialogAnchor()" class="edit"><span>openEducationDialogAnchor</span> </a>
-            <a (click)="openOtherexperienceDialogAnchor()" class="edit"><span>openOtherexperience</span> </a>
+            
+            <ul style="list-style-type: none;">
+                <li>
+                    <a (click)="openEmploymentDialogAnchor()" class="edit">Add Employment</a>
+                </li>
+                <li>
+                    <a (click)="openEducationDialogAnchor()" class="edit">Add Education</a>
+                </li>
+                <li>
+                    <a (click)="openPlaceDialogAnchor()" class="edit">Add Place </a>
+                </li>
+                <li>
+                    <a (click)="openOtherexperienceDialogAnchor()" class="edit">Add Others</a>
+                </li>
+                
+            </ul>
 
-            <a (click)="openPlaceDialogAnchor()" class="edit"><span>openPlaceDialogAnchor</span> </a>
+         
         </div>
         <profile-category [categoryWiseAnswers]="categoryWiseAnswers"></profile-category>
         <profile-stat [profileParam]="profileParam"></profile-stat>
