--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/dialog-modal/dialog.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/dialog-modal/dialog.component.html
@@ -14,10 +14,10 @@
             <div class="exit-button" (click)="onClickedExit()">x</div>
             <header>
                 <div class="question-title">
-                    <user-info [userObj]="question.userViewModel" [viewDate]="question?.createdOn" [isAnonymous]="question?.isAnonymous"></user-info>
-                    <h3>
-                        {{question.title}}
-                    </h3>
+                    <question-header [question]="question"></question-header>
+                    <h1>
+                        <a [routerLink]="['/question/detail',question.id]">{{question.title}}</a>
+                    </h1>
                 </div>
             </header>
             <div class="panel-article">
@@ -56,6 +56,7 @@
                     <button type="button" class="btn btn-info fixed-height" (click)="onQuestionDetailClicked(false)">Cancel</button>
                 </div>
             </form>
+            <ap-status [isQuestion]='false' [questionObj]="question" [answerObj]="question.bestAnswer" (onQuestionReportClicked)="onQuestionReportClicked($event,questionId,answerId)" (onQuestionDetailClicked)="onQuestionDetailClicked($event)"></ap-status>
         </div>
     </div>
 </div>
