--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/navbar.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/navbar.less
@@ -2,9 +2,9 @@
 
 .navbar {
     position: fixed;
-    height: 40px;
+    height: 64px;
     min-height: 40px;
-    background-color: transparent;
+    background-color: rgba(134, 134, 134, 0.64);
     border: none;
 }
 
@@ -77,7 +77,7 @@
 }
 
 .navbar-brand {
-    color: @alta-navbar-default-link-color !important;
+    color: white !important;
     height: 40px;
     padding: 0px 0px;
     margin-left: 5px;
@@ -99,7 +99,7 @@
 
     > li {
         > a {
-            color: @alta-navbar-default-link-color !important;
+            color: white !important;
             padding-top: 10px;
             padding-bottom: 10px;
 
