--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/banner/carousel.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/banner/carousel.css
@@ -9,6 +9,7 @@
 
 
 .slides {
+    max-height:320px;
     list-style: none;
     position: relative;
     width: 400%; /* Number of panes * 100% */
@@ -21,10 +22,10 @@
 
 /*====Indicator Style======*/
 .active{
-    background-color:white;
+    background-color:#ccc5c5;
 }
 .carousel-indicators {
-    top: 277px;
+    top: 235px;
 }
 
 .fixed-height { /*for scrol top*/
@@ -59,7 +60,7 @@ ul {
     bottom: 0px;
     left: 0px;
     text-align: center;
-    color: #fff;
+    color: #ccc5c5;
     font-family: myriadpro-regular;
     text-shadow: 2px 2px 5px black;
 }
