--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-otherexperience.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-otherexperience.component.html
@@ -1,6 +1,6 @@
 ﻿<style>
     .credential-dialog {
-        margin: 15% auto;
+        margin: 10% auto;
         max-width: 45%;
     }
 
@@ -44,19 +44,37 @@
         <div class="exit-button" (click)="onClickedExit()">x</div>
         <div class="modal-container" style="border:1px solid;">
             <div class="modal-header">
-                <h3>Edit Credentials</h3>
-                <p>Credentials also appear on answers you write.</p>
+                <h3>Add Others</h3>
+               
             </div>
             <div class="profile-modal-body">
-                <i class="fa fa-user"></i><span>Edit</span>
-                <div>
-                    <input type="text" [(ngModel)]="credential.title" />
-                </div>
-                <div class="profile-modal-button-container">
-                    <a (click)="DeleteCredentialTitle()">Delete</a>
-                    <a (click)="onClickedExit()">Cancel</a>
-                    <button class="btn btn-sm btn-primary" (click)="saveCredentialTitle()">Save</button>
-                </div>
+                <form class="form-horizontal" (ngSubmit)="saveOtherExperience()" #otherExperienceForm="ngForm">
+                    <div class="form-group">
+                        <label class="control-label col-sm-4" for="pwd">Category:</label>
+                        <div class="col-sm-8">
+                            <select class="form-control" [(ngModel)]="otherExperience.categoryId" [ngModelOptions]="{standalone: true}">
+                                <option selected="selected" value="">
+                                <option value="test">test</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-sm-4" for="email">Description (required):</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" id="Description" placeholder="Enter Description" [(ngModel)]="otherExperience.Description" required name="Description"
+                                   #Description="ngModel">
+                            <div [hidden]="Description.valid || Description.pristine"
+                                 class="alert alert-danger">
+                                Description is required
+                            </div>
+                        </div>
+                    </div>
+                    <div class="profile-modal-button-container">
+                        <a (click)="DeleteCredentialTitle()">Delete</a>
+                        <a (click)="onClickedExit()">Cancel</a>
+                        <button type="submit" class="btn btn-success" [disabled]="!otherExperienceForm.form.valid">Save</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
