Loader position fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/layout.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/layout.less
@@ -22,6 +22,12 @@ hr {
 .row {
     overflow: hidden;
 }
-.inline-display{
-    display:inline-block;
+
+.row-fix {
+    padding-right: -15px;
+    padding-left: -15px;
+}
+
+.inline-display {
+    display: inline-block;
 }
