--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-otherexperience.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-otherexperience.component.html
@@ -53,8 +53,10 @@
                         <label class="control-label col-sm-4" for="pwd">Category:</label>
                         <div class="col-sm-8">
                             <select class="form-control" [(ngModel)]="otherExperience.categoryId" [ngModelOptions]="{standalone: true}">
-                                <option selected="selected" value="">
-                                <option value="test">test</option>
+                                <option [value]="-1" disabled="true" selected>Selecciona la categoría</option>
+                                <option *ngFor="let category of categories" [value]="category.id">
+                                    {{category.name}}
+                                </option>
                             </select>
                         </div>
                     </div>
