--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -19,7 +19,7 @@
 </div>
 <div class="row">
     <div class="col-md-9" >
-        <div class="row" ><profile-info [credential]="credential"></profile-info></div>
+        <div class="row" *ngIf="credential" ><profile-info  [credential]="credential"></profile-info></div>
         <div class="row">
             <div class="col-md-3" >
                 <ul class="profile-leftmenu">
