--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -27,10 +27,10 @@
                     <li><a class="link-with-number" [routerLink]="['/dashboard/viewprofile',credential.userId,'user-answer']">Answers<span>{{profileParam?.answers}}</span> </a></li>
                     <li><a class="link-with-number" [routerLink]="['/dashboard/viewprofile',credential.userId,'follower']" >Followers <span>{{profileParam?.followers}}</span></a></li>
                     <li><a class="link-with-number" [routerLink]="['/dashboard/viewprofile',credential.userId,'following']">Followings <span>{{profileParam?.followings}}</span></a></li>
-                    <li><a [routerLink]="['/dashboard/viewprofile',credential.userId,'bookmark']">Bookmarks</a></li>
+                    <li><a [routerLink]="['/dashboard/viewprofile',credential.userId,'bookmark']">Bookmarks <span>{{profileParam?.bookmarks}}</span></a></li>
                     <li><a [routerLink]="['/dashboard/viewprofile',credential.userId,'blog-create']">Blogs</a></li>
                     <!--<li><a [routerLink]="['/dashboard/blog-post']">Blog Post</a></li>-->
-                    <li><a [routerLink]="['/dashboard/viewprofile',credential.userId,'direct-question']">Direct Question</a></li>
+                    <li><a [routerLink]="['/dashboard/viewprofile',credential.userId,'direct-question']">Direct Question<span>{{profileParam?.directQuestions}}</span></a></li>
                 </ul>
             </div>
             <div class="col-md-9 border-top-grey" >
