akash:some update

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -248,7 +248,7 @@
                             success: function (respText) {
                                 console.log(respText);
                                 $('#headerUserName').text(respText.name);
-                                $('#my_image').attr('src', '../images/' + respText.imageUrl);
+                                $('#my_image').attr('src', '../profile/' + respText.imageUrl);
                             },
                             error: function (jqXhr, textStatus, errorThrown) {
 
