Nav bar user fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
@@ -29,6 +29,7 @@
 @import "site/components/question-body";
 @import "site/components/dashboard_viewprofile";
 @import "site/components/dashboard_viewprofile_profile-info";
+@import "site/components/shared_userinfo";
 .right-border{
     border-right:1px solid;
     color:white;
