--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_userinfo.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_userinfo.less
@@ -1,4 +1,9 @@
-﻿.user-info {
+﻿.nav-user-info{
+    margin-top: 16px;
+    display: inline-block;
+    color: white;
+}
+.user-info {
     padding-top: 15px;
     padding-left:15px;
     float: left;
