--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/nav-bar/nav-bar.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/nav-bar/nav-bar.component.html
@@ -1,4 +1,7 @@
-﻿<div class="navbar navbar-inverse navbar-fixed-top z-header backgroundset" [ngClass]="className">
+﻿<div #loginDialogAnchor></div>
+<div #registerDialogAnchor></div>
+
+<div class="navbar navbar-inverse navbar-fixed-top z-header backgroundset" [ngClass]="className">
     <ap-search placeBottom="top-fixed"></ap-search>
     <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -17,8 +20,8 @@
             <li><a routerLink="/question/home/1">Questions</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right" *ngIf="!_logObj.isLoggedIn">
-            <li><a href="/signin">Log in</a></li>
-            <li><a href="/signin">Register</a></li>
+            <li><a (click)="openLoginDialogAnchor()">Log in</a></li>
+            <li><a (click)="openRegisterDialogAnchor()">Register</a></li>
         </ul>
         <div class="navbar-right" *ngIf="_logObj.isLoggedIn">
             <a href="#" class="dropdown-toggle fixed-height" data-toggle="dropdown" aria-expanded="false">
