--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/nav-bar/nav-bar.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/nav-bar/nav-bar.component.html
@@ -20,8 +20,10 @@
             <li><a routerLink="/question/home/1">Questions</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right" *ngIf="!_logObj.isLoggedIn">
-            <li><a (click)="openLoginDialogAnchor()">Log in</a></li>
-            <li><a (click)="openRegisterDialogAnchor()">Register</a></li>
+            <!--<li><a (click)="openLoginDialogAnchor()">Log in</a></li>
+            <li><a (click)="openRegisterDialogAnchor()">Register</a></li>-->
+            <li><a href="/signin">Log in</a></li>
+            <li><a href="/signin">Register</a></li>
         </ul>
         <div class="navbar-right" *ngIf="_logObj.isLoggedIn">
             <a href="#" class="dropdown-toggle fixed-height" data-toggle="dropdown" aria-expanded="false">
