view profile: 1. Posted question view added 2. Book mark quesation added

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/dashboard_viewprofile.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/dashboard_viewprofile.less
@@ -33,3 +33,7 @@
 .profile-leftmenu > li > a > span {
     float: right;
 }
+.active-link{
+    border-bottom: 1px solid #ffd800;
+    background-color:#f4f4f4
+}
