--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/Register.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/Register.cshtml
@@ -5,48 +5,91 @@
 
 
 @*<form asp-controller="Account" asp-action="Register" asp-route-returnUrl="@ViewData["returnUrl"]" method="post" class="form-horizontal" role="form">
-    <h4>Create a new account.</h4>
-    <hr />
-    <div asp-validation-summary="All" class="text-danger"></div>
-    <div class="form-group">
-        <label asp-for="Email" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="Email" class="form-control" />
-            <span asp-validation-for="Email" class="text-danger"></span>
+        <h4>Create a new account.</h4>
+        <hr />
+        <div asp-validation-summary="All" class="text-danger"></div>
+        <div class="form-group">
+            <label asp-for="Email" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <label asp-for="Password" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="Password" class="form-control" />
-            <span asp-validation-for="Password" class="text-danger"></span>
+        <div class="form-group">
+            <label asp-for="Password" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="Password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <label asp-for="ConfirmPassword" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="ConfirmPassword" class="form-control" />
-            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+        <div class="form-group">
+            <label asp-for="ConfirmPassword" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="ConfirmPassword" class="form-control" />
+                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <button type="submit" class="btn btn-default">Register</button>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <button type="submit" class="btn btn-default">Register</button>
+            </div>
         </div>
-    </div>
-</form>*@
+    </form>*@
+<style>
+    .loginForm {
+        opacity: .95;
+        margin-top: 63px;
+        width: 674px;
+        margin-left: -135px;
+    }
+
+    .form-horizontal {
+        border-radius: 10px;
+        height: 355px;
+        padding-left: 1px;
+        padding-right: 0px;
+    }
+
+    .login-header {
+        text-align: center;
+        margin-bottom: 26px;
+        color: #5491c6;
+        font-size: 21px;
+    }
+
+    .form-control {
+        background-color: #cccccc;
+        height: 41px;
+        border-radius: 7px;
+    }
+
+    .btn-default {
+        background-color: #fba409;
+        border-radius: 10px;
+        height: 45px;
+        font-size: 21px;
+        min-width: 174px;
+    }
+
+    .forget-password {
+        margin-left: 4px;
+    }
+</style>
+
 <div class="row">
     <div class="col-md-4">
-        <img class="left-border" src="~/images/border.png" />
+        @*<img class="left-border" src="~/images/border.png" />*@
+        .
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4 loginForm">
 
         <section>
 
             <form asp-controller="Account" asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
-
-                <h2>Sign Up</h2>
-                <div asp-validation-summary="All" class="text-danger"></div>
+                <h2 class="login-header">
+                    Sign Up
+                </h2>
+                @*<div asp-validation-summary="All" class="text-danger"></div>*@
                 <div class="form-group">
                     <div class="col-sm-offset-1 col-md-10">
                         <input asp-for="Email" placeholder="Email" class="form-control" />
@@ -70,10 +113,10 @@
                         <button type="submit" class="btn btn-default">Sign Up</button>
                     </div>
                 </div>
-                
+
                 @*<p class="col-sm-offset-1">
-                    <a asp-action="ForgotPassword">Forgot password?</a>
-                </p>*@
+                        <a asp-action="ForgotPassword">Forgot password?</a>
+                    </p>*@
             </form>
         </section>
     </div>
