akash:password changing form added

--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Shared/_Layout.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Shared/_Layout.cshtml
@@ -119,6 +119,9 @@
         .navbar-brand {
             color: #0c0c0c;
         }
+        .jumbotron {
+           margin-top: 18px;
+        }
     </style>
 </head>
 
