--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Manage/ChangePassword.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Manage/ChangePassword.cshtml
@@ -4,7 +4,11 @@
 }
 
 <h2>@ViewData["Title"].</h2>
-
+<style>
+    .form-horizontal {
+        height: 379px;
+    }
+</style>
 <form asp-controller="Manage" asp-action="ChangePassword" method="post" class="form-horizontal" role="form">
     <h4>Change Password Form</h4>
     <hr />
